# itmo-yandex

./: README.md
sem-01/C++/2023-ha1-matrices-andreyvaran/: main.cpp  matrices.cpp  matrices.hpp
sem-01/C++/2023-ha2-bignum-andreyvaran/: CMakeLists.txt  bignum.hpp  polinom.hpp  smoke_test.cpp  smoke_test_polinom  smoke_test_polinom.cpp  testa.h
sem-01/C++/2023-winter-exam-andreyvaran/: .gitignore  Node.cpp  Node.h  set.hpp  smoke_test.cpp
sem-01/C++/cpp-classroom-2324-sem01-cls01-andreyvaran/: CMakeLists.txt
sem-01/C++/cpp-classroom-2324-sem01-cls03-andreyvaran/: CMakeLists.txt  smoke_task_1  smoke_task_2  smoke_task_4
sem-01/C++/cpp-classroom-2324-sem01-cls04-andreyvaran/: .gitignore  CMakeLists.txt
sem-01/C++/cpp-classroom-2324-sem01-cls06-andreyvaran/: .gitignore  CMakeLists.txt  task_1_1_test  task_1_2_test  task_1_3_test
sem-01/C++/cpp-classroom-2324-sem01-cls08-andreyvaran/: .gitignore  (+1 more)
sem-01/C++/cpp-classroom-2324-sem01-cls11-andreyvaran/: .gitignore  CMakeLists.txt  README.adoc
sem-01/C++/cpp-classroom-2324-sem01-cls11-andreyvaran/src/task_0_any_all/: test.cpp
sem-01/C++/cpp-classroom-2324-sem01-cls11-andreyvaran/src/task_0_for_each/: test.cpp
sem-01/C++/cpp-classroom-2324-sem01-cls11-andreyvaran/src/task_1_logger/: test.cpp
sem-01/C++/cpp-classroom-2324-sem01-cls11-andreyvaran/src/task_2_event/: test.cpp
sem-01/C++/cpp-classroom-2324-sem01-cls11-andreyvaran/src/task_3_tuple_utils/: test_apply.cpp  test_at_many.cpp  test_transform_elements.cpp
sem-01/C++/cpp-classroom-2324-sem01-cls11-andreyvaran/src/task_4_join/: test.cpp
(+69 files in other folders)
